Solved very annoying MUI problem
If there is a scrollbar on the screen, opening a Select removes it. This is intentional (use can not scroll the screen while select is open) but it has the unfortunate consequence of removing the browser scrollbar is that it increases the viewport size, causing all responsive layout to shift. This tells it "leave it be".

Also add ability to feed in info to process instance hook.

--- a/spiffworkflow-frontend/src/index.css
+++ b/spiffworkflow-frontend/src/index.css
@@ -1,6 +1,10 @@
 /* site is mainly using white theme. */
 /* header is mainly using g100 */
 /* mockup wanted white, not grey, text */
+body {
+  /* This prevents the annoying MUI select box layout shift */
+  overflow-y: auto !important;
+}
 .cds--header,
 a.cds--header__menu-item {
   color: white;
